# TestEngines

./: .gitignore  CMakeLists.txt  core.cpp  core.h  engine.cpp  engine.h  interface.cpp  interface.h  jsonprinter.cpp  jsonprinter.h  main.cpp
